# prototype

./: .gitignore  .gitmodules  README.md  compose.yaml  docker-compose.yml
.github/workflows/: swagger.yml
api-server/: .gitignore  Dockerfile  api.html  api.yml  requirements.txt  rest-api.py
campaign/: .dockerignore  compose.yaml
campaign/app-runner/: Dockerfile
campaign/controller/: Dockerfile  api_server.py  entrypoint.sh  requirements.txt
campaign/controller/test/: test_app.py  test_runner_api.py
campaign/kble/: Dockerfile  connection.jsonnet
campaign/simulation-logger/: Dockerfile  logger.py  requirements.txt
campaign/simulator/: Dockerfile
campaign/tlmcmd-bridge/: Dockerfile  build.rs
campaign/tlmcmd-bridge/src/: influxdb.rs  main.rs
grafana/: dashboard-settings.yaml  datasource.yaml
grafana/dashboards/: dashboard.json
log-db/init-scripts/: init_backet.sh
simulator/: .dockerignore  Dockerfile  requirements.txt  run_tmtc.sh  runner_api.py
simulator/test/: test_runner_api.py
simulator/tmtc-c2a/: Cargo.toml
simulator/tmtc-c2a/src/: influxdb.rs  lib.rs  main.rs  satellite.rs
web-console/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
web-console/backend/: rest-api.py
web-console/src/: App.tsx  main.jsx  route.ts
web-console/src/components/: Grafana.tsx  InterpreterScreen.tsx  MonacoEditor.tsx  Simulation.tsx  SimulationPanel.tsx  SimulationRenderer.jsx  TerminalScreen.tsx
web-console/src/utils/: atoms.ts  calculateEarthRotation.ts  coeToTle.ts  customHooks.ts  data.ts  influxClient.ts  (+1 more)
(+17 files in other folders)
